--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "dev": "nodemon index.js",
     "test": "node test.js"
   },
-  "keywords": ["whatsapp", "messaging", "api", "business", "ai", "wit.ai"],
+  "keywords": [
+    "whatsapp",
+    "messaging",
+    "api",
+    "business",
+    "ai",
+    "wit.ai"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.8.7",
     "node-wit": "^6.0.0"
   },
   "devDependencies": {
