--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,13 @@
       {
         "src": "./index.js",
         "use": "@vercel/node"
+      },
+      {
+        "src": "public/**",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
-      {
-        "src": "/public/(.*)",
-        "dest": "/public/$1"
-      },
       {
         "src": "/dashboard.html",
         "dest": "/public/dashboard.html"
@@ -18,6 +18,18 @@
       {
         "src": "/login.html",
         "dest": "/public/login.html"
+      },
+      {
+        "src": "/erd.html",
+        "dest": "/public/erd.html"
+      },
+      {
+        "src": "/erd-corrected.html",
+        "dest": "/public/erd-corrected.html"
+      },
+      {
+        "src": "/public/(.*)",
+        "dest": "/public/$1"
       },
       {
         "src": "/(api|webhook)/(.*)",
