--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,18 @@
     ],
     "routes": [
       {
+        "src": "/api/(.*)",
+        "dest": "/api/$1"
+      },
+      {
+        "src": "/webhook/(.*)",
+        "dest": "/webhook/$1"
+      },
+      {
+        "src": "/webhook",
+        "dest": "/webhook"
+      },
+      {
         "src": "/dashboard.html",
         "dest": "/public/dashboard.html"
       },
@@ -30,10 +42,6 @@
       {
         "src": "/public/(.*)",
         "dest": "/public/$1"
-      },
-      {
-        "src": "/(api|webhook)/(.*)",
-        "dest": "/$1/$2"
       },
       {
         "src": "/(.*)",
