--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "node-cron": "^4.2.1",
-    "node-wit": "^6.6.0"
+    "node-wit": "^6.6.0",
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
