--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^7.8.7",
     "node-cron": "^4.2.1",
     "node-wit": "^6.6.0",
+    "openai": "^4.20.1",
     "pdfkit": "^0.17.2"
   },
   "devDependencies": {
