--- a/vercel.json
+++ b/vercel.json
@@ -35,5 +35,13 @@
         "src": "/(.*)",
         "dest": "/"
       }
-    ]
+    ],
+    "functions": {
+      "./index.js": {
+        "maxDuration": 30
+      }
+    },
+    "env": {
+      "NODE_ENV": "production"
+    }
   }
