--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "node-cron": "^4.2.1",
     "node-wit": "^6.6.0",
     "openai": "^4.20.1",
-    "pdfkit": "^0.17.2"
+    "pdfkit": "^0.17.2",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@vercel/node": "^5.3.24",
     "nodemon": "^3.1.10"
   }
 }
