--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
     "builds": [
       {
         "src": "./index.js",
-        "use": "@vercel/node"
+        "use": "@vercel/node",
+        "config": {
+          "maxDuration": 30
+        }
       },
       {
         "src": "public/**",
@@ -36,11 +39,6 @@
         "dest": "/"
       }
     ],
-    "functions": {
-      "./index.js": {
-        "maxDuration": 30
-      }
-    },
     "env": {
       "NODE_ENV": "production"
     }
